Fix z-index

--- a/walleon/src/assets/sass/components/_device.scss
+++ b/walleon/src/assets/sass/components/_device.scss
@@ -79,6 +79,7 @@
     }
 
     &__percentage {
+        z-index: 0;
         position: absolute;
         top: $spacer;
         right: $spacer;
